--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -1,8 +1,8 @@
-name: Super-Linter
-
+name: Linter
+ 
 # Run this workflow every time a new commit pushed to your repository
 on: push
-
+ 
 jobs:
   # Set the job key. The key is displayed as the job name
   # when a job name is not provided
@@ -11,16 +11,16 @@ jobs:
     name: Runs linter
     # Set the type of machine to run on
     runs-on: ubuntu-latest
-
+ 
     steps:
       # Checks out a copy of your repository on the ubuntu-latest machine
       - name: Checkout code
         uses: actions/checkout@v2
-    
+        
       # installing dependencies
       - name: install dependencies
         run: make install
-
+ 
       # Runs the Super-Linter action
       - name: Run Linter
-        run: make lint
+        run: make lint 
